--- a/sass/components/_social-icons.scss
+++ b/sass/components/_social-icons.scss
@@ -1,5 +1,5 @@
 .social-icon {
-    @extend %flex-align;
+    @extend  %flex-center;
 
     &--team {
         margin-top: 16px;
@@ -15,7 +15,7 @@
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    &__list + &__list {
+    &__item + &__item {
         margin-left: 10px;
     }
 
