--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,7 +2,7 @@
 
 .hero {
     background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)), url(/images/bg-1.jpg);
+    rgba(47, 48, 58, 0.4)), url(/images/bg/bg-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
