--- a/css/main.css
+++ b/css/main.css
@@ -439,7 +439,7 @@ summary {
 
 /* studio hero title */
 .hero {
-  background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/bg/bg-1.jpg);
+  background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
